# Konelaskin

./: .gitignore  README.md  tasks.py
dokumentaatio/: arkkitehtuuri.md  arkkitehtuurikuvaus.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
konelaskin/: pyproject.toml
konelaskin/dokumentaatio/: changelog.md  tuntikirjanpito.md  vaatimusmaarittely.md
konelaskin/src/: index.py
konelaskin/src/entities/: calculation.py
konelaskin/src/tests/: calculator_test.py
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py  maksukortti_test.py.save
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: laajennettu_luokkakaavio.md  luokkakaavio.md  sekvenssikaavio.md
src/: index.py  initialize_old_calculations.py  konelaskin.py
src/entities/: calculate.py  calculation.py
src/repositories/: calculation_repository.py
src/services/: calculate.py
src/tests/: calculation_test.py  calculator_test.py
src/ui/: konelaskin.py  main.py
